fix issue with navbar wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,6 @@ body a:hover{
     text-transform: uppercase;
 	padding:1em;
 }
-.navbar-nav {
-    margin: 0 0 0 7em;
-}
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #6BC676;
     background-color: transparent;
@@ -95,13 +92,15 @@ body a:hover{
 /*-- nav-hover-effect --*/
 .menu__list {
 	position: relative;
-    -webkit-flex-wrap: inherit;
-    flex-wrap: inherit;
+	display: inline-block;
+    -webkit-flex-wrap: nowrap;
+    flex-wrap: nowrap;
     list-style: none;
 }
 
 .menu__item {
-	display: block;
+	white-space:nowrap;
+	display: inline;
 	margin: 1em 0;
 }
 
@@ -112,7 +111,6 @@ body a:hover{
 	-ms-user-select: none;
 	user-select: none;
 	-webkit-touch-callout: none;
-	-khtml-user-select: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
